--- a/templates/cf-jobs.yml
+++ b/templates/cf-jobs.yml
@@ -424,6 +424,8 @@ properties:
     memory_overcommit_factor: 3
     disk_mb: (( merge ))
     disk_overcommit_factor: 2
+    staging_disk_inode_limit: 200000
+    instance_disk_inode_limit: 200000
     deny_networks: (( merge || [] ))
     allow_networks: (( merge || [] ))
     kernel_network_tuning_enabled: true
